# finplan

./: .gitignore  20260101_IMPROVEMENT_PLAN.md  20260102_EVENT_SYSTEM_PLAN.md  20260106_API_IMPROVEMENT_SUGGESTIONS.md  20260108_SIMULATION_WIZARD_REDESIGN_PLAN.md  CLAUDE.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE.txt  PLAN.md  PLAN_RATZILLA_WEB.md  README.md  RMD_IMPLEMENTATION_PLAN.md
.cargo/: config.toml
.github/workflows/: build-cli.yml  build-web.yml  release.yml
crates/finplan/: Cargo.toml  README.md  Trunk.toml  index.html
crates/finplan/bindings/: TaxStatus.ts  WithdrawalOrder.ts
crates/finplan/data/: analyze_inflation.py
crates/finplan/src/: accounts.rs  app.rs  apply.rs  builder.rs  cash_flows.rs  descriptors.rs  error.rs  evaluate.rs  event.rs  event_engine.rs  events.rs  ids.rs  keybindings.rs  lib.rs  liquidation.rs  logging.rs  main.rs  metadata.rs  models.rs  profiles.rs  records.rs  results.rs  rmd.rs  simulation.rs  simulation_state.rs  spending.rs  tax_config.rs  taxes.rs  web.rs  worker.rs
crates/finplan/src/actions/: account.rs  amount.rs  analysis.rs  config.rs  effect.rs  event.rs  holding.rs  mod.rs  optimize.rs  profile.rs  scenario.rs  wizard.rs
crates/finplan/src/components/: collapsible.rs  mod.rs  portfolio_overview.rs  status_bar.rs  tab_bar.rs
crates/finplan/src/components/charts/: distribution.rs  mod.rs
crates/finplan/src/components/lists/: mod.rs  selectable_list.rs
crates/finplan/src/components/panels/: accounts_panel.rs  event_list_panel.rs  ledger_panel.rs  mod.rs  profiles_panel.rs
crates/finplan/src/config/: account_builder.rs  asset_builder.rs  builder.rs  descriptors.rs  event_builder.rs  metadata.rs  mod.rs
crates/finplan/src/data/: analysis_data.rs  app_data.rs  convert.rs  events_data.rs  keybindings_data.rs  mod.rs  parameters_data.rs  portfolio_data.rs  profiles_data.rs  rename.rs  storage.rs  ticker_profiles.rs
crates/finplan/src/modals/: action.rs  amount_builder.rs  confirm.rs  context.rs  form.rs  handler.rs  helpers.rs  message.rs  mod.rs  picker.rs  scenario_picker.rs  state.rs  text_input.rs
crates/finplan/src/model/: accounts.rs  cash_flows.rs  events.rs  ids.rs  market.rs  metadata.rs  mod.rs  profiles.rs  records.rs  results.rs  rmd.rs  spending.rs  tax_config.rs
crates/finplan/src/platform/: mod.rs  storage.rs  worker.rs
crates/finplan/src/platform/native/: mod.rs  storage.rs  worker.rs
crates/finplan/src/platform/web/: mod.rs  storage.rs  worker.rs
crates/finplan/src/screens/: analysis.rs  events.rs  mod.rs  optimize.rs  portfolio.rs  portfolio_profiles.rs  profiles.rs  results.rs  scenario.rs
crates/finplan/src/state/: app_state.rs  cache.rs  context.rs  errors.rs  mod.rs  modal.rs  modal_action.rs  panels.rs  screen_state.rs  tabs.rs
crates/finplan/src/tests/: accounts.rs  basic.rs  builder_dsl.rs  comprehensive.rs  contribution_limits.rs  events.rs  mod.rs  returns.rs  rmd.rs  simulation_result.rs
crates/finplan/src/util/: common.rs  format.rs  io.rs  mod.rs  percentiles.rs  styles.rs
crates/finplan_core/: COMPILED_EVENTS_PLAN.md  Cargo.toml
crates/finplan_core/benches/: simulation_benchmarks.rs
crates/finplan_core/bindings/: ContributionLimit.ts  ContributionLimitPeriod.ts  IncomeType.ts  InflationProfile.ts  LotMethod.ts  ReturnProfile.ts
crates/finplan_core/data/returns/: dow_annual_returns.csv  sp_500_annual_returns.csv
crates/finplan_core/src/: apply.rs  date_math.rs  error.rs  evaluate.rs  lib.rs  liquidation.rs  metrics.rs  simulation.rs  simulation_state.rs  taxes.rs
crates/finplan_core/src/analysis/: config.rs  evaluator.rs  metrics.rs  mod.rs
crates/finplan_core/src/config/: account_builder.rs  asset_builder.rs  builder.rs  descriptors.rs  event_builder.rs  metadata.rs  mod.rs
crates/finplan_core/src/model/: accounts.rs  events.rs  ids.rs  market.rs  mod.rs  records.rs  results.rs  rmd.rs  state_event.rs  tax_config.rs
crates/finplan_core/src/optimization/: binary_search.rs  config.rs  evaluator.rs  grid_search.rs  mod.rs  nelder_mead.rs  result.rs
crates/finplan_core/src/tests/: accounts.rs  basic.rs  builder_dsl.rs  comprehensive.rs  contribution_limits.rs  event_effects.rs  mod.rs  profiling.rs  returns.rs  rmd.rs  rsu.rs  simulation_result.rs
crates/finplan_server/: Cargo.toml  finplan.db
crates/finplan_server/bindings/: AccountTypeDef.ts  EventDef.ts  RepeatInterval.ts  SimulationRequest.ts  TriggerEndDef.ts
crates/finplan_server/src/: api_conversion.rs  api_types.rs  error.rs  main.rs  models.rs  validation.rs
crates/finplan_server/src/db/: mod.rs
crates/finplan_server/src/handlers/: mod.rs  portfolio_handlers.rs  simulation_handlers.rs
crates/finplan_server/src/routes/: mod.rs  portfolios.rs  simulations.rs
data/inflation/: annual_inflation.csv
examples/: example.yaml
scripts/: .env.example  .gitignore  fetch_historical_returns.py
spec/: 00_project_overview.md  01_core_architecture.md  02_data_model.md  03_simulation_engine.md  04_tui_application.md  05_future_roadmap.md
src/: main.rs  models.rs  profiles.rs  simulation.rs
web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/portfolios/: page.tsx
web/app/results/: page.tsx
web/app/simulations/: page.tsx
web/components/: app-sidebar.tsx  nav-main.tsx  portfolio-detail.tsx  portfolio-wizard.tsx  portfolios-list.tsx  results-dashboard.tsx  simulation-detail.tsx  simulation-wizard.tsx  simulations-list.tsx  team-switcher.tsx
web/components/simulation-wizard/: MoneyInput.tsx  index.ts  types.ts
web/components/simulation-wizard-v2/: COMPARISON.md  IMPLEMENTATION_COMPLETE.md  README.md  index.tsx  types.ts
web/components/ui/: checkbox.tsx  wizard.tsx
web/lib/: api.ts  types.ts
web/lib/api-types/: AccountDef.ts  AmountDef.ts  AssetDef.ts  EffectDef.ts  NamedReturnProfileDef.ts  PositionDef.ts  ReturnProfileRef.ts  TaxConfigDef.ts  TriggerDef.ts  TriggerStartDef.ts  WithdrawalSourceDef.ts  index.ts
web/src/: App.tsx  types.ts.backup
web/src/app/: layout.tsx  page.tsx
(+37 files in other folders)
