[workspace]
resolver = "2"
members = [
    "crates/finplan_core",
    "crates/finplan_server"
]

[profile.release]
lto = "thin"

[workspace.dependencies]
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs.git", features = ["serde-compat", "jiff-impl"] }
