[package]
name = "finplan"
version = "0.1.0"
edition = "2024"

# Library target for both native and web
[lib]
crate-type = ["cdylib", "rlib"]

# Binary target only for native builds
[[bin]]
name = "finplan"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "crossterm",
    "dirs",
    "tracing-appender",
    "clap",
    "finplan_core/parallel",
    "ratatui/crossterm",
]
web = [
    "ratzilla",
    "gloo-storage",
    "gloo-timers",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "console_error_panic_hook",
    "getrandom",
    "tracing-wasm",
]

[dependencies]
# Core simulation library
finplan_core = { path = "../finplan_core", default-features = false }

# Shared dependencies - jiff needs 'js' feature for WASM timezone support
jiff = { workspace = true }
serde = { workspace = true }
serde-saphyr = "0.0.15"
rand = { workspace = true }
rand_distr = { workspace = true }
ratatui = { version = "0.30.0", default-features = false }
color-eyre = "0.6.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native-only dependencies
crossterm = { version = "0.29.0", optional = true }
dirs = { version = "6.0", optional = true }
tracing-appender = { version = "0.2", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# Web-only dependencies
ratzilla = { version = "0.3.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
gloo-timers = { version = "0.3.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window", "Document", "KeyboardEvent", "EventTarget"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }
tracing-wasm = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
