[package]
name = "finplan"
version = "0.1.0"
edition = "2024"

[dependencies]
finplan_core = { path = "../finplan_core" }

jiff = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde-saphyr = "0.0.15"

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
dirs = "6.0"
ratatui = "0.30.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
