[package]
name = "finplan_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
jiff = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }

rayon = { version = "1.11.0", optional = true }
rustc-hash = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulation_benchmarks"
harness = false
