[package]
name = "finplan_core"
version = "0.6.1"
edition = "2024"

[dependencies]
jiff = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }

rayon = "1.11.0"
rustc-hash = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulation_benchmarks"
harness = false
