[package]
name = "finplan_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
finplan = { path = "../finplan" }
jiff = { version = "0.2.16", features = ["serde"] }
