[package]
name = "finplan_server"
version = "0.1.0"
edition = "2024"

[dependencies]
finplan = { path = "../finplan", features = ["ts"] }

serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
ts-rs = { workspace = true }

axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
